tests/src/frontend/syntax/invalid/duplicate_named_parameter.sk
fun foo{t: Int}: void {
  void
}

fun main(): void {
  foo{t => 0, t => 0};
  void
}
